src/test/deca/syntax/valid/SO/synt/decla_variable_simple.deca
// Description:
//    Programme pour vérifier la déclaration de variable sans affectation
//
// Resultats:
//    
//
// Historique:
//    cree le 07/01/2022

{
    $1 _E;
    x E$1, uy;
}