src/test/deca/syntax/invalid/SO/synt/intWith0.deca
// Description:
//    Programme pour vérifier la validité d'un identificateur
//
// Resultats:
//    Erreur ligne 10 : un entier ne peut pas commencer par un 0
//
// Historique:
//    cree le 13/01/2022
{
    int x = 03;
}